Fix alignment for items in Section 4

--- a/styles.css
+++ b/styles.css
@@ -48,10 +48,10 @@ button {
     background-color: #3882f6;
     color: #f9faf8;
     font-size: 18px;
-    width: 110px;
-    height: 32px;
-    border: none;
+    min-width: 110px;
+    min-height: 32px;
     border-radius: 4px;
+    border: none;
 }
 
 .header-links {
@@ -164,13 +164,39 @@ figure {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 40px;
+}
+
+.blue-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #3882f6;
+    color: #f9faf8;
+    margin: 60px;
+    padding: 16px 80px;
+    gap: 250px;
+    border-radius: 4px;
+}
+
+.blue-left {
+    display: flex;
+    flex-direction: column;
 }
 
 .sign-up {
-    background-color: #3882f6;
-    width: 500px;
-    padding: 40px;
-    margin: 60px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+.sign-up-caption {
+    font-weight: lighter;
+    margin-top: 0;
+}
+
+.bottom-button {
+    border: 2px solid #f9faf8;
 }
 
 /*** Footer ***/
